2014-03-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Fix example in documentation on named address spaces in ROM.

2014-03-09 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/non-free/include/pic14/pic*.h,
	  device/non-free/include/pic16/pic18f*.h,
	  device/non-free/lib/pic14/libdev/pic*.c,
	  device/non-free/lib/pic16/libdev/pic18f*.c:
	  Regenerate the DEVICE.[ch] files with the cinc2h.pl program.

2014-03-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (notVolatileVariable): fixed strchr params

2014-03-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/stm8/gen.c: retry to revert previous two changes

2014-02-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/stm8/gen.c: reverted previous two changes (not committed)
	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.4.0 rc1
	* sdcc.spec: version 3.4.0

2014-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Simplify and improve ifx code generation.

2014-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Applied patch #227 by Ben Shi to fix jumping on float in y and to speed up jumping on byte in yl.

2014-02-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Applied patch #223 by Ben Shi to improve code size for signed bit-fields on stm8.
	* src/stm8/main.c:
	  Applied patch #225 by Pascal S to enable naked functions for stm8.

2014-02-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/peeph.def:
	  Applied patch #222 by Ben Shi (new peephole to make shifts slightly more efficient).
	* src/stm8/gen.c:
	  Applied patch #221 by Ben Shi (fix some bugs in shifts).

2014-02-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeDivision): Fixed bug 2254

2014-02-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Fix condition for shifting stack operands in a.
